# Agent-for-Journal-Selection

./: .gitignore  README.md  pyproject.toml
data/: Social Sciences Citation Index (SSCI).csv  law_taxonomy.json  legal_journals.law_list.full.json  legal_journals.seed.json  sample_manuscript.txt  source_manifest.demo.json  source_manifest.example.json  source_manifest.ssci.json  source_manifest.ssci_expanded_articles5.json  source_manifest.ssci_law_articles5.json  source_manifest.ssci_law_interdisciplinary_articles5.json  source_manifest.ssci_law_list.json  source_manifest.ssci_quick.json  ssci_law_journals_from_xlsx.csv
output/: supervised_training_report.ssci_law_interdisciplinary_articles5.clean_hard.json  supervised_training_report.ssci_law_interdisciplinary_articles5.clean_hard.test.csv  supervised_training_report.ssci_law_interdisciplinary_articles5.clean_hard.validation.csv
src/journal_agent/: __init__.py  __main__.py
src/journal_agent/cli/: app.py
src/journal_agent/data/: __init__.py  enrichment.py  repository.py  sources.py
src/journal_agent/ingestion/: __init__.py  manuscript_parser.py
src/journal_agent/models/: __init__.py  schemas.py
src/journal_agent/ranking/: __init__.py  evaluation.py  recommender.py  scoring.py  subfields.py  supervised.py
src/journal_agent/utils/: __init__.py  text_processing.py
