[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "legal-journal-agent"
version = "0.1.0"
description = "Extensible AI-assisted journal recommendation pipeline for legal manuscripts."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12",
  "pydantic>=2.0",
  "PyYAML>=6.0",
  "openpyxl>=3.1",
  "requests>=2.31",
  "scikit-learn>=1.4",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
